--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Parcel React App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">Primary</div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
